# e-stock-pipeline

./: .env  .env.dev  .env.example  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.in  requirements.txt
.claude/: settings.json  settings.local.json
app/common/config/: settings.py
app/common/db/: __init__.py  base.py  engine.py  session.py
app/common/db_core/: __init__.py  base.py  init_schema.py  session.py
app/common/kafka/: producer.py  test_producer.py
app/employee_sheets_cdc/clients/: google_sheets_client.py
app/employee_sheets_cdc/scripts/: consume_employee_changes.py  test_row_mapping.py  test_sheets_connection.py
app/estock/: test_minio_upload.py
app/estock/clients/: kis_client.py
app/estock/kafka/: consumer.py  kis_message_classifier.py  kis_trade_parser.py  producer.py  topics.py
app/estock/repositories/: stock_price_repository.py
app/estock/services/: stock_price_service.py
app/estock/storage/: minio_storage.py
app/monitoring_google_workspace_logs/clients/: __init__.py  google_auth_client.py  google_calendar_client.py  pagination.py
app/monitoring_google_workspace_logs/scripts/: check_calendar.py  collect_calendar_to_kafka.py  consume_calendar_events.py  consume_to_database.py  (+2 more)
dags/: google_calendar_kafka_to_db_dag.py  google_calendar_to_kafka_dag.py  kis_current_price_to_postgres.py  kis_period_price_to_postgres.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
docs/hist/: README_v0.2.md
e-stock-pipeline/: .env.example  .gitignore  docker-compose.yaml  docker-compose.yml
e-stock-pipeline/e-stock-pipeline/: .dockerignore  .gitignore  README.md  requirements.txt
producer/: test_producer.py
scripts/: compile_requirements.ps1  compile_requirements.sh
(+69 files in other folders)
