[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e-stock-pipeline"
version = "0.1.0"
description = "Data engineering learning project: stock pipeline + Google Workspace monitoring"
requires-python = ">=3.12"

[project.scripts]
list-calendars = "app.monitoring_google_workspace_logs.scripts.list_calendars:main"
sync-calendars = "app.monitoring_google_workspace_logs.scripts.sync_calendars:main"
consume-calendar = "app.monitoring_google_workspace_logs.scripts.consume_calendar_events:main"
consume-to-database = "app.monitoring_google_workspace_logs.scripts.consume_to_database:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["dags*", "logs*", "plugins*", "producers*", "scripts*", "secrets*", "config*", "data*"]
